fix(security): remediate OWASP/CWE audit findings (2026-06-30) (#767)
* feat(cloudwatch): add new tasks (#639)

* fix trigger

* chore: update README

* docs(dynamodb): small changes

* feat(plugin): added metrics to aws plugins (#642)

* feat(plugin): add @Metric annotations for Athena Query plugin

* feat(plugin): added metrics for s3 list plugin

* feat(plugin): added metrics to s3 delete list

* feat(plugin): added metrics to s3 upload plugin

* feat(plugin): added metrics to Kinesis PutRecords

* feat(plugin): added metrics to sqs consume

* feat(plugin): added metrics to sqs publish

* feat(plugin): added metrics to sns publish

* feat(plugin): added metrics to eventbridge/PutEvents.java

* chore: fix release gradle tasks

* feat(triggers): introduce stateful trigger (#645)

* ci: add release.yml

* fix: missing metrics (#643)

* Update Download.java

* Update Downloads.java

* Update DeleteItem.java

* Update GetItem.java

* Update PutItem.java

* Update DeleteItem.java

* Update GetItem.java

* Update PutItem.java

* Update Query.java

* Update Scan.java

* fix: removed wrong metrics and unused imports

* add-metrics-s3

* removed unused import.

* remove `totalSize` from output

* removed `file.size`

* fix

---------

Co-authored-by: François Delbrayelle <fdelbrayelle@gmail.com>

* chore(deps): bump org.testcontainers:testcontainers from 1.21.3 to 2.0.1 (#648)

* chore(deps): bump org.testcontainers:testcontainers from 1.21.3 to 2.0.1

Bumps [org.testcontainers:testcontainers](https://github.com/testcontainers/testcontainers-java) from 1.21.3 to 2.0.1.
- [Release notes](https://github.com/testcontainers/testcontainers-java/releases)
- [Changelog](https://github.com/testcontainers/testcontainers-java/blob/main/CHANGELOG.md)
- [Commits](https://github.com/testcontainers/testcontainers-java/compare/1.21.3...2.0.1)

---
updated-dependencies:
- dependency-name: org.testcontainers:testcontainers
  dependency-version: 2.0.1
  dependency-type: direct:production
  