@@ -1,7 +1,16 @@
 package io.kestra.plugin.aws.s3;
 
+import java.time.Duration;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Optional;
+import java.util.stream.Stream;
+
+import com.fasterxml.jackson.annotation.JsonUnwrapped;
+
 import io.kestra.core.models.annotations.Example;
 import io.kestra.core.models.annotations.Plugin;
+import io.kestra.core.models.annotations.PluginProperty;
 import io.kestra.core.models.conditions.ConditionContext;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.property.Property;
@@ -9,14 +18,12 @@ import io.kestra.core.models.triggers.*;
 import io.kestra.core.runners.RunContext;
 import io.kestra.plugin.aws.AbstractConnectionInterface;
 import io.kestra.plugin.aws.s3.models.S3Object;
+
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.*;
 import lombok.experimental.SuperBuilder;
 
-import java.time.Duration;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
+import static io.kestra.core.models.triggers.StatefulTriggerService.*;
 import static io.kestra.core.utils.Rethrow.throwFunction;
 
 @SuperBuilder
@@ -25,17 +32,13 @@ import static io.kestra.core.utils.Rethrow.throwFunction;
 @Getter
 @NoArgsConstructor
 @Schema(
-    title = "Trigger a flow on a new file arrival in an S3 bucket.",
-    description = "This trigger will poll every `interval` s3 bucket. " +
-        "You can search for all files in a bucket or directory in `from` or you can filter the files with a `regExp`. " +
-        "The detection is atomic, internally we do a list and interact only with files listed.\n" +
-        "Once a file is detected, we download the file on internal storage and process with a declared `action` " +
-        "in order to move or delete the files from the bucket (to avoid double detection on new poll)."
+    title = "Trigger on S3 object creation/update",
+    description = "Polls a bucket on a fixed interval, listing with prefix/regex filters. Downloads matched objects to internal storage and can move or delete them to prevent reprocessing. Maintains state per trigger to avoid duplicates."
 )
 @Plugin(
     examples = {
         @Example(
-            title = "Wait for a list of files on a s3 bucket and iterate through the files.",
+            title = "Wait for a list of files on a s3 bucket and iterate through the files",
             full = true,
             code = """
                 id: s3_listen
@@ -66,7 +69,7 @@ import static io.kestra.core.utils.Rethrow.throwFunction;
                 """
         ),
         @Example(
-            title = "Wait for a list of files on a s3 bucket and iterate through the files. Delete files manually after processing to prevent infinite triggering.",
+            title = "Wait for a list of files on a s3 bucket and iterate through the files. Delete files manually after processing to prevent infinite triggering",
             full = true,
             code = """
                 id: s3_listen
@@ -103,14 +106,18 @@ import static io.kestra.core.utils.Rethrow.throwFunction;
         )
     }
 )
-public class Trigger extends AbstractTrigger implements PollingTriggerInterface, TriggerOutput<List.Output>, ListInterface, ActionInterface, AbstractS3ObjectInterface, AbstractConnectionInterface {
+public class Trigger extends AbstractTrigger
+    implements PollingTriggerInterface, TriggerOutput<Trigger.Output>, ListInterface, ActionInterface, AbstractS3ObjectInterface, AbstractConnectionInterface, StatefulTriggerInterface {
     @Builder.Default
     private final Duration interval = Duration.ofSeconds(60);
 
+    @PluginProperty(secret = true)
     protected Property<String> accessKeyId;
 
+    @PluginProperty(secret = true)
     protected Property<String> secretKeyId;
 
+    @PluginProperty(secret = true)
     protected Property<String> sessionToken;
 
     protected Property<String> region;
@@ -157,9 +164,27 @@ public class Trigger extends AbstractTrigger implements PollingTriggerInterface,
     @Builder.Default
     private Property<Boolean> forcePathStyle = Property.ofValue(false);
 
+    @Builder.Default
+    private final Property<On> on = Property.ofValue(On.CREATE_OR_UPDATE);
+
+    @Builder.Default
+    @Schema(
+        title = "The maximum number of files to retrieve at once"
+    )
+    @PluginProperty(group = "execution")
+    private Property<Integer> maxFiles = Property.ofValue(25);
+
+    private Property<String> stateKey;
+
+    private Property<Duration> stateTtl;
+
     @Override
     public Optional<Execution> evaluate(ConditionContext conditionContext, TriggerContext context) throws Exception {
         RunContext runContext = conditionContext.getRunContext();
+
+        var rOn = runContext.render(on).as(On.class).orElse(On.CREATE_OR_UPDATE);
+        var rStateKey = runContext.render(stateKey).as(String.class).orElse(StatefulTriggerService.defaultKey(context.getNamespace(), context.getFlowId(), id));
+        var rStateTtl = runContext.render(stateTtl).as(Duration.class);
 
         List task = List.builder()
             .id(this.id)
@@ -179,6 +204,7 @@ public class Trigger extends AbstractTrigger implements PollingTriggerInterface,
             .expectedBucketOwner(this.expectedBucketOwner)
             .regexp(this.regexp)
             .filter(this.filter)
+            .maxFiles(this.maxFiles)
             .stsRoleArn(this.stsRoleArn)
             .stsRoleSessionName(this.stsRoleSessionName)
             .stsRoleExternalId(this.stsRoleExternalId)
@@ -187,52 +213,104 @@ public class Trigger extends AbstractTrigger implements PollingTriggerInterface,
             .compatibilityMode(this.compatibilityMode)
             .forcePathStyle(this.forcePathStyle)
             .build();
+
         List.Output run = task.run(runContext);
 
         if (run.getObjects().isEmpty()) {
             return Optional.empty();
         }
 
-        java.util.List<S3Object> list = run
-            .getObjects()
-            .stream()
-            .map(throwFunction(object -> {
-                Download download = Download.builder()
-                    .id(this.id)
-                    .type(List.class.getName())
-                    .region(this.region)
-                    .endpointOverride(this.endpointOverride)
-                    .accessKeyId(this.accessKeyId)
-                    .secretKeyId(this.secretKeyId)
-                    .sessionToken(this.sessionToken)
-                    .stsRoleArn(this.stsRoleArn)
-                    .stsRoleSessionName(this.stsRoleSessionName)
-                    .stsRoleExternalId(this.stsRoleExternalId)
-                    .stsRoleSessionDuration(this.stsRoleSessionDuration)
-                    .stsEndpointOverride(this.stsEndpointOverride)
-                    .requestPayer(this.requestPayer)
-                    .bucket(this.bucket)
-                    .key(Property.ofValue(object.getKey()))
-                    .compatibilityMode(this.compatibilityMode)
-                    .forcePathStyle(this.forcePathStyle)
-                    .build();
-                Download.Output downloadOutput = download.run(runContext);
+        var previousState = readState(runContext, rStateKey, rStateTtl);
 
-                return object.withUri(downloadOutput.getUri());
+        java.util.List<S3Object> actionBlobs = new ArrayList<>();
+
+        var toFire = run.getObjects().stream()
+            .flatMap(throwFunction(object ->
+            {
+                var resolvedBucket = runContext.render(bucket).as(String.class).orElse("");
+                var uri = String.format("s3://%s/%s", resolvedBucket, object.getKey());
+
+                Instant modifiedAt = Optional.ofNullable(object.getLastModified()).orElse(Instant.now());
+                String version = Optional.ofNullable(object.getEtag()).orElse(String.valueOf(modifiedAt.toEpochMilli()));
+
+                var candidate = StatefulTriggerService.Entry.candidate(uri, version, modifiedAt);
+                var change = computeAndUpdateState(previousState, candidate, rOn);
+
+                if (change.fire()) {
+                    var changeType = change.isNew() ? ChangeType.CREATE : ChangeType.UPDATE;
+
+                    var download = Download.builder()
+                        .id(this.id)
+                        .type(Download.class.getName())
+                        .region(this.region)
+                        .endpointOverride(this.endpointOverride)
+                        .accessKeyId(this.accessKeyId)
+                        .secretKeyId(this.secretKeyId)
+                        .sessionToken(this.sessionToken)
+                        .stsRoleArn(this.stsRoleArn)
+                        .stsRoleSessionName(this.stsRoleSessionName)
+                        .stsRoleExternalId(this.stsRoleExternalId)
+                        .stsRoleSessionDuration(this.stsRoleSessionDuration)
+                        .stsEndpointOverride(this.stsEndpointOverride)
+                        .requestPayer(this.requestPayer)
+                        .bucket(this.bucket)
+                        .key(Property.ofValue(object.getKey()))
+                        .compatibilityMode(this.compatibilityMode)
+                        .forcePathStyle(this.forcePathStyle)
+                        .build();
+
+                    var dlOut = download.run(runContext);
+                    var downloaded = object.withUri(dlOut.getUri());
+
+                    actionBlobs.add(object);
+
+                    return Stream.of(
+                        TriggeredObject.builder()
+                            .object(downloaded)
+                            .changeType(changeType)
+                            .build()
+                    );
+                }
+                return Stream.empty();
             }))
-            .collect(Collectors.toList());
+            .toList();
 
-        S3Service.performAction(
-            run.getObjects(),
-            this.action,
-            this.moveTo,
-            runContext,
-            this,
-            this
-        );
+        writeState(runContext, rStateKey, previousState, rStateTtl);
 
-        Execution execution = TriggerService.generateExecution(this, conditionContext, context, List.Output.builder().objects(list).build());
+        if (toFire.isEmpty()) {
+            return Optional.empty();
+        }
+
+        S3Service.performAction(actionBlobs, this.action, this.moveTo, runContext, this, this);
+
+        var output = Output.builder().objects(toFire).build();
+        Execution execution = TriggerService.generateExecution(this, conditionContext, context, output);
 
         return Optional.of(execution);
+    }
+
+    public enum ChangeType {
+        CREATE,
+        UPDATE
+    }
+
+    @Getter
+    @AllArgsConstructor
+    @Builder
+    public static class TriggeredObject {
+        @JsonUnwrapped
+        private final S3Object object;
+        private final ChangeType changeType;
+
+        public S3Object toObject() {
+            return object;
+        }
+    }
+
+    @Builder
+    @Getter
+    public static class Output implements io.kestra.core.models.tasks.Output {
+        @Schema(title = "List of S3 objects that triggered the flow, each with its change type")
+        private final java.util.List<TriggeredObject> objects;
     }
 }
